--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,135 @@
-.bold-span {
-    font-weight: bold;
-    font-size: 17px;
+body {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    font-weight: 500px;
+    /*color: #fff;*/
+    /*background-color: #222222;*/
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
+
+
 .text-right {
     float: right;
+}
+
+.text-center {
+}
+
+
+.container {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 70%;
+    /*height: 300px;*/
+    background: #f1f1f1;
+    margin: 100px auto 0;
+    word-break: break-all;
+    border: 1px solid rgba(0, 0, 0, 0.274);
+}
+
+.bloc-tabs {
+    display: flex;
+}
+.tabs {
+
+    padding: 15px;
+    text-align: center;
+    width: 50%;
+    background: rgba(128, 128, 128, 0.075);
+    cursor: pointer;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.274);
+    box-sizing: content-box;
+    position: relative;
+    outline: none;
+}
+.tabs:not(:last-child){
+    border-right: 1px solid rgba(0, 0, 0, 0.274);
+}
+
+.active-tabs  {
+    background: white;
+    border-bottom: 1px solid transparent;
+}
+
+.active-tabs::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100% + 2px);
+    height: 5px;
+    background: rgb(88, 147, 241);
+}
+
+.content-tabs {
+    flex-grow : 1;
+}
+.content {
+    background: white;
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+.content h2 {
+    padding: 0px 0 5px 0px;
+}
+.content hr {
+    width: 100px;
+    height: 2px;
+    background: #222;
+    margin-bottom: 5px;
+}
+.content p {
+    width: 100%;
+    height: 100%;
+}
+.active-content {
+    display: block;
+}
+
+.table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.table-titles {
+    text-align: left;
+}
+
+.index-column {
+    color: #9da2a8;
+    text-align: center;
+}
+
+/*.edit-span {*/
+/*    float: right;*/
+/*    margin-right: 10px;*/
+/*    font-size: 0.93em;*/
+/*}*/
+
+/*.edit-input {*/
+/*    width: 30px;*/
+/*    float: right;*/
+/*    margin-right: 10px;*/
+/*    line-height: 50%;*/
+/*}*/
+
+.select-table {
+    margin-right: 10px;
+    float: right;
+    border: white;
+    background: white;
 }
