--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -363,6 +363,36 @@ a {
     height: fit-content;
 }
 
+.filter-header {
+    padding: 0 5px;
+    margin: 5px 0;
+    font-size: 24px;
+}
+
+.filter-ul {
+    padding-left: 5px;
+}
+
+.filter-name {
+    padding-left: 5px;
+    font-size: 18px;
+}
+
+.filter-checkbox {
+    width: 15px; height: 15px;
+    /*border-radius: 50%;*/
+    transition: box-shadow .3s;
+    background: lightgrey;
+    cursor: pointer;
+    border: 1px solid #070707;
+    border-radius: 5px;
+    appearance: none; -webkit-appearance: none;
+}
+
+.filter-checkbox:checked {
+    box-shadow: inset 0 0 0 20px #BD00FF;
+}
+
 @media screen and (max-width: 1285px) and (min-width: 975px) {
     .cards__img {
         width: 150px;
