--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -345,7 +345,7 @@ a {
 
 .search-header {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     grid-column-start: span 2;
     align-self: flex-start;
     width: 100%;
@@ -504,21 +504,26 @@ a {
 
     .search-page-container {
         display: grid;
-        grid-template: auto auto / auto auto;
+        grid-template: auto auto / auto auto auto;
+        width: 100%;
     }
 
     .cards__img {
-        width: 100%;
+        width: 48%;
         font-size: 16px;
     }
 
     .search-section {
+        display: flex;
         grid-column-start: span 2;
-        display: grid;
-        grid-gap: 15px;
-        grid-template: repeat(25, auto)/ repeat(2, auto);
+        flex-wrap: wrap;
+    }
+
+    .filter-menu-disactive {
+        display: none;
     }
 }
+
 
 .active-header {
     grid-column-start: span 2;
@@ -527,18 +532,21 @@ a {
 .active-section {
     /*clear: left;*/
     grid-column-start: 1;
-    margin-left: -45%;
     /*float: left;*/
     margin-right: 3%;
     position: relative;
-    width: 100%;
-    transition: margin 0.25s ease;
+    width: 242%;
 }
 
 .filter-menu-active {
     float: left;
     position: relative;
+    background: #302D2D;
+    padding: 20px;
+    width: 120%;
+    z-index: 3;
 }
+
 
 
 /*Filters transition*/
