--- a/frontend/src/components/Auth/auth.css
+++ b/frontend/src/components/Auth/auth.css
@@ -64,3 +64,21 @@
     color: #D255FF;
     cursor: pointer;
 }
+
+.sign-enter {
+    opacity: 0;
+    transform: scale(0.9);
+}
+.sign-enter-active {
+    opacity: 1;
+    transform: translateX(0);
+    transition: opacity 300ms, transform 300ms;
+}
+.sign-exit {
+    opacity: 1;
+}
+.sign-exit-active {
+    opacity: 0;
+    transform: scale(0.9);
+    transition: opacity 300ms, transform 300ms;
+}
