--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -654,7 +654,7 @@ a {
 .profile {
     min-height: 100vh;
     display: grid;
-    grid-template: auto auto / auto 1fr;
+    grid-template: auto 1fr / auto 1fr;
 }
 .profile-aside {
     display: flex;
@@ -662,7 +662,7 @@ a {
     max-width: 350px;
 }
 .profile-picture img{
-    max-width: 300px;
+    max-width: 200px;
     border-radius: 20px;
 }
 .profile-name {
@@ -676,21 +676,27 @@ a {
 }
 /*Time bar*/
 .time-bar{
-    color: white;
-    cursor: default;
-    display: inline-block;
-    font-size: 11px;
-    font-weight: normal;
-    height: inherit;
-    line-height: 13px;
-    text-align: center;
+    overflow: hidden;
+    position: relative;
     white-space: nowrap;
+    width: 100%;
+    height: 8px;
+    line-height: 8px;
 }
 .cuts {
+    line-height: 5px;
     position: relative;
+    white-space: nowrap;
+}
+.cut{
+    background: #302D2D;
+    height: 8px;
+    position: absolute;
+    width: 2px;
+    line-height: 8px;
 }
 .time-part{
-    color: white;
+    color: #302D2D;
     cursor: default;
     display: inline-block;
     font-size: 11px;
@@ -699,4 +705,26 @@ a {
     line-height: 13px;
     text-align: center;
     white-space: nowrap;
+}
+.time {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: #9da2a8;
+    display: inline-block;
+    font-size: 11px;
+    text-align: center;
+    width: 20%;
+}
+.checked-time {
+    color: white;
+}
+.checked-time:before{
+    font-family: 'Marlett',sans-serif;
+    text-transform: none;
+    letter-spacing: normal;
+    content: "✓";
+    color: #2ecc40;
+    font-size: 11px;
+    margin-right: 4px;
 }
